Refactored and finished building lexer Added `tests` folder to check behavior. These tests will eventually be built out into a workflow.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ set(CMAKE_CXX_STANDARD 20)
 
 project(Descend VERSION 0.0)
 
+set(SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src")
+
 add_executable(Descend)
-target_sources(Descend PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/descend.cpp")
-target_sources(Descend PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/lexer.cpp")
+target_sources(Descend PRIVATE "${SRC_DIR}/descend.cpp")
+target_sources(Descend PRIVATE "${SRC_DIR}/lexer.cpp")
+target_sources(Descend PRIVATE "${SRC_DIR}/token.cpp")
